# dnsmasq_safety_checker

./: .gitignore  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
dnsmasq_safety_checker/: __init__.py  cli.py  local_audit.py  network_scan.py  reporting.py  rules.py
examples/: sample_report.json
script/: README.md  dnsmasq_safe_poc.py
tests/: test_rules.py
