[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dnsmasq-safety-checker"
version = "0.1.0"
description = "Safe, non-destructive scanner for dnsmasq exposure and CVE-2026 risk triage"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Aung Myat Thu" }]
keywords = ["dnsmasq", "scanner", "cve", "dns", "dhcp", "defensive-security"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Security",
  "Topic :: System :: Networking",
]
dependencies = []

[project.scripts]
dnsmasq-check = "dnsmasq_safety_checker.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dnsmasq_safety_checker*"]
